--- a/.github/workflows/xiaomi_ra4_zy.yml
+++ b/.github/workflows/xiaomi_ra4_zy.yml
@@ -16,11 +16,11 @@ on:
     inputs:
       ssh:
         description: 'SSH 连接至 Actions'
-        required: true
-        default: 'true'
+        required: false
+        default: 'false'
 
 env:
-  REPO_URL: https://github.com/coolsnowwolf/lede
+  REPO_URL: https://github.com/immortalwrt/immortalwrt
   REPO_BRANCH: master
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: ra4zy.config
@@ -30,7 +30,7 @@ env:
   UPLOAD_FIRMWARE: true
   UPLOAD_COWTRANSFER: true
   UPLOAD_WETRANSFER: true
-  UPLOAD_RELEASE: false
+  UPLOAD_RELEASE: true
   TZ: Asia/Shanghai
 
 jobs:
