--- a/ra4zy.config
+++ b/ra4zy.config
@@ -28,6 +28,7 @@ CONFIG_PACKAGE_libcurl=y
 CONFIG_PACKAGE_libminiupnpc=y
 CONFIG_PACKAGE_libnatpmp=y
 CONFIG_PACKAGE_libstdcpp=y
+CONFIG_PACKAGE_luci-theme-design=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-ddns is not set
 # CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_ShadowsocksR_Libev_Client is not set
